--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "@reduxjs/toolkit": "^2.5.0",
+    "@types/js-cookie": "^3.0.6",
     "antd": "^5.22.5",
     "axios": "^1.7.9",
+    "js-cookie": "^3.0.5",
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
