--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/node": "^22.10.5",
     "antd": "^5.22.5",
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
