--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
   "singleQuote": true,
   "tabWidth": 2,
   "printWidth": 100,
-  "useTabs": true,
+  "useTabs": false,
   "bracketSpacing": true
 }
